# cros-codecs

./: .gitignore  Android.bp  Cargo.toml  DIR_METADATA  METADATA  OWNERS  README.md  TEST_MAPPING  cargo_embargo.json  simple_test.py
.cargo/: config.toml
.github/workflows/: lava.yml  rust.yml
ci/: config.yaml  lava_job_generate.py  template.yaml
ci/test-cases/: cros-codecs-single.yaml  cros-codecs.yaml  run_tests.py
examples/: ccdec-v4l2-stateless.rs  ccdec.rs  ccenc.rs  perf_test.rs  simple_player.rs
examples/ccdec/: main.rs  md5.rs  util.rs  v4l2_stateless_decoder.rs  vaapi_decoder.rs
examples/ccenc/: main.rs  util.rs  v4l2_stateful_encoder.rs  vaapi_encoder.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decoder_h264.rs  decoder_vp8.rs
src/: backend.rs  bitstream_utils.rs  c2_wrapper.rs  codec.rs  decoder.rs  decoders.rs  encoder.rs  image_processing.rs  lib.rs  utils.rs  video_frame.rs
src/backend/: dummy.rs  v4l2.rs  vaapi.rs
src/backend/dummy/: decoder.rs
src/backend/v4l2/: decoder.rs  encoder.rs
src/backend/v4l2/decoder/: stateless.rs
src/backend/vaapi/: decoder.rs  encoder.rs  surface_pool.rs
src/c2_wrapper/: c2_decoder.rs  c2_encoder.rs  c2_v4l2_decoder.rs  c2_v4l2_encoder.rs  c2_vaapi_decoder.rs  c2_vaapi_encoder.rs
src/codec/: av1.rs  h264.rs  h265.rs  vp8.rs  vp9.rs
src/codec/av1/: helpers.rs  parser.rs  reader.rs  synthesizer.rs  writer.rs
src/codec/av1/test_data/: av1-annexb.ivf  gen_crcs.sh  test-25fps.ivf.av1.crc  test-25fps.ivf.av1.md5
src/codec/h264/: dpb.rs  nalu.rs  nalu_reader.rs  nalu_writer.rs  parser.rs  picture.rs  synthesizer.rs
src/codec/h264/test_data/: 64x64-I-P-B-P-high.h264.md5  64x64-I-P-B-P.h264  64x64-I-P-B-P.h264.md5  64x64-I-P.h264.md5  64x64-I.h264  64x64-I.h264.md5  gen_crcs.sh  test-25fps-interlaced.h264.md5  test-25fps.h264.md5
src/codec/h265/: dpb.rs  parser.rs  picture.rs
src/codec/h265/test_data/: 64x64-I-P-B-P.h265  64x64-I-P-B-P.h265.crc  64x64-I-P-B-P.h265.md5  64x64-I-P.h265  64x64-I-P.h265.crc  64x64-I-P.h265.md5  64x64-I.h265  64x64-I.h265.crc  64x64-I.h265.md5  README.md  bbb.h265.crc  bbb.h265.md5  bear.h265.crc  bear.h265.md5  gen_crcs.sh  test-25fps.h265.crc  test-25fps.h265.md5
src/codec/vp8/: bool_decoder.rs  parser.rs  probs.rs
src/codec/vp8/test_data/: gen_crcs.sh  test-25fps.vp8.md5
src/codec/vp9/: parser.rs
src/codec/vp9/test_data/: gen_crcs.sh  resolution_change_500frames-vp9.ivf.md5  test-25fps.vp9.md5  vp90-2-10-show-existing-frame.vp9.ivf.md5  vp90-2-10-show-existing-frame2.vp9.ivf.md5
src/decoder/: stateful.rs  stateless.rs
src/decoder/h264/: backends.rs  decoder.rs  dpb.rs  parser.rs  picture.rs
src/decoder/h264/backends/: dummy.rs  vaapi.rs
src/decoder/h264/test_data/: 64x64-I-P-B-P-high.h264.crc  64x64-I-P.h264.crc  64x64-I.h264.crc
src/decoder/h265/: backends.rs  decoder.rs  dpb.rs  parser.rs  picture.rs
src/decoder/stateless/: av1.rs  h264.rs  h265.rs  vp8.rs  vp9.rs
src/decoder/stateless/av1/: dummy.rs  v4l2.rs  vaapi.rs
src/decoder/stateless/h264/: backends.rs  dpb.rs  dummy.rs  parser.rs  picture.rs  v4l2.rs  vaapi.rs
src/decoder/stateless/h265/: backends.rs  dpb.rs  dummy.rs  parser.rs  picture.rs  vaapi.rs
src/decoder/stateless/vp8/: backends.rs  bool_decoder.rs  dummy.rs  parser.rs  v4l2.rs  vaapi.rs
src/decoder/stateless/vp9/: backends.rs  dummy.rs  parser.rs  v4l2.rs  vaapi.rs
src/decoder/vp8/: backends.rs  decoder.rs  parser.rs
src/decoder/vp8/backends/: dummy.rs  vaapi.rs
src/decoder/vp9/: backends.rs  decoder.rs  parser.rs
src/decoder/vp9/backends/: dummy.rs  vaapi.rs
src/decoder/vp9/test_data/: README.md
src/decoders/: h264.rs  h265.rs
src/decoders/h264/: backends.rs  decoder.rs  dpb.rs  parser.rs  picture.rs
src/decoders/h264/backends/: dummy.rs  vaapi.rs
src/decoders/h265/: backends.rs  decoder.rs  dpb.rs  parser.rs  picture.rs
src/decoders/vp8/: backends.rs  bool_decoder.rs  decoder.rs  parser.rs
src/decoders/vp9/: backends.rs  decoder.rs  parser.rs
src/device/: v4l2.rs
src/device/v4l2/: stateless.rs  utils.rs
src/encoder/: av1.rs  h264.rs  h265.rs  stateful.rs  stateless.rs  vp8.rs  vp9.rs
src/encoder/stateful/: vp9.rs
src/encoder/stateless/: av1.rs  h264.rs  predictor.rs  vp9.rs
src/test_data/: puppets-480x270_20230825.i420.yuv  puppets-480x270_20230825.mm21.yuv  puppets-480x270_20230825.nv12.yuv
src/utils/: dummy.rs  nalu.rs  nalu_reader.rs  vaapi.rs
src/video_frame/: frame_pool.rs  gbm_video_frame.rs  generic_dma_video_frame.rs  v4l2_mmap_video_frame.rs
test/: AndroidTest.xml  ccdec_test.rs
(+37 files in other folders)
