[package]
name = "cros-codecs"
version = "0.0.5"
license = "BSD-3-Clause"
description = "Hardware-accelerated codecs for Linux"
repository = "https://github.com/chromeos/cros-codecs"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[features]
default = ["vaapi"]
vaapi = ["libva"]
v4l2 = ["v4l2r"]

[dependencies]
anyhow = "1"
bitreader = "0.3.6"
byteorder = "1.4.3"
bytes = "1.1.0"
enumn = "0.1.4"
libva = { version = "0.0.7", package = "cros-libva", optional = true }
v4l2r = { version = "0.0.3", package = "v4l2r", optional = true }
log = { version = "0", features = ["release_max_level_debug"] }
thiserror = "1.0.31"
crc32fast = "1.3.2"
nix = { version = "0.29", features = ["fs", "event"] }

[dev-dependencies]
argh = "0.1"
env_logger = "0.10.0"
matroska-demuxer = "0.5.0"
md5 = "0.7"
drm = "0.11.0"
gbm = { version = "0.14", default-features = false, features = ["drm-support"] }

[lints.rust]
# Required to allow #[cfg(fuzzing)]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[[example]]
name = "ccdec"
required-features = ["vaapi"]

[[example]]
name = "ccdec-v4l2-stateless"
required-features = ["v4l2"]

[[example]]
name = "ccenc"
required-features = ["vaapi"]
