[package]
name = "cros-codecs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
anyhow = "1"

[dependencies.cros-codecs]
path = ".."

[[bin]]
name = "decoder_h264"
path = "fuzz_targets/decoder_h264.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decoder_vp8"
path = "fuzz_targets/decoder_vp8.rs"
test = false
doc = false
bench = false
